--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <div class="nav-buttons">
                 <ul>
                     <li> <a href="index.html"><h5>INICIO</h5></a></li>
-                    <li> <a href="heladerias.html"><h5>RESTAURANTES</h5></a></li>
+                    <li> <a href="restaurantes.html"><h5>RESTAURANTES</h5></a></li>
                     <li> <a href="heladerias.html"><h5>HELADERÍAS</h5></a></li>
-                    <li> <a href="heladerias.html"><h5>CAFETERÍAS</h5></a></li>
-                    <li> <a href="heladerias.html"><h5>FOOD TRUCKS</h5></a></li>
+                    <li> <a href="cafeterias.html"><h5>CAFETERÍAS</h5></a></li>
+                    <li> <a href="foodtrucks.html"><h5>FOOD TRUCKS</h5></a></li>
                 </ul>
             </div>
         </div>
@@ -69,14 +69,14 @@
             <!-- Card 2 -->
             <a href="/detalles.html" class="card-link">
                 <div class="card">
-                    <img class="local-img" src="./img/comida-mexicana.jpg" alt="comida-mexicana">
+                    <img class="local-img" src="./img/Heladeria.jpg" alt="comida-mexicana">
                     <div class="category">
-                        <span class="cat">RESTAURANTE</span>
+                        <span class="cat">HELADERÍA</span>
                     </div>
                     <div class="brand-mark">
                         <div class="branding">
                             <img src="./img/logo-restorant.png" alt="orden-tacos">
-                            <h3>Los Pollsmanos</h3>
+                            <h3>Heladería Gustavo</h3>
                         </div>
                         <div class="mark">
                             <span><i class="fa fa-star"></i> 3.9</span>
@@ -88,14 +88,14 @@
             <!-- Card 3 -->
             <a href="/detalles.html" class="card-link">
                 <div class="card">
-                    <img class="local-img" src="./img/comida-mexicana.jpg" alt="comida-mexicana">
+                    <img class="local-img" src="./img/foodtruck.jpg" alt="comida-mexicana">
                     <div class="category">
-                        <span class="cat">RESTAURANTE</span>
+                        <span class="cat">FOOD TRUCK</span>
                     </div>
                     <div class="brand-mark">
                         <div class="branding">
                             <img src="./img/logo-restorant.png" alt="orden-tacos">
-                            <h3>Los Pollsmanos</h3>
+                            <h3>Fritos food truck </h3>
                         </div>
                         <div class="mark">
                             <span><i class="fa fa-star"></i> 3.9</span>
@@ -110,14 +110,14 @@
             <!-- Card 1 -->
             <a href="/detalles.html" class="card-link">
                 <div class="card">
-                    <img class="local-img" src="./img/comida-mexicana.jpg" alt="comida-mexicana">
+                    <img class="local-img" src="./img/cafeteria.jpg" alt="comida-mexicana">
                     <div class="category">
-                        <span class="cat">RESTAURANTE</span>
+                        <span class="cat">CAFETERÍA</span>
                     </div>
                     <div class="brand-mark">
                         <div class="branding">
                             <img src="./img/logo-restorant.png" alt="orden-tacos">
-                            <h3>Los Pollsmanos</h3>
+                            <h3>Cafe con Pastel</h3>
                         </div>
                         <div class="mark">
                             <span><i class="fa fa-star"></i> 3.9</span>
@@ -130,14 +130,14 @@
             <!-- Card 2 -->
             <a href="/detalles.html" class="card-link">
                 <div class="card">
-                    <img class="local-img" src="./img/comida-mexicana.jpg" alt="comida-mexicana">
+                    <img class="local-img" src="./img/comida-mexicana2.jpg" alt="comida-mexicana">
                     <div class="category">
                         <span class="cat">RESTAURANTE</span>
                     </div>
                     <div class="brand-mark">
                         <div class="branding">
                             <img src="./img/logo-restorant.png" alt="orden-tacos">
-                            <h3>Los Pollsmanos</h3>
+                            <h3>Tijuana restobar</h3>
                         </div>
                         <div class="mark">
                             <span><i class="fa fa-star"></i> 3.9</span>
@@ -149,14 +149,14 @@
             <!-- Card 3 -->
             <a href="/detalles.html" class="card-link">
                 <div class="card">
-                    <img class="local-img" src="./img/comida-mexicana.jpg" alt="comida-mexicana">
+                    <img class="local-img" src="./img/Heladeria.jpg" alt="comida-mexicana">
                     <div class="category">
-                        <span class="cat">RESTAURANTE</span>
+                        <span class="cat">HELADERÍA</span>
                     </div>
                     <div class="brand-mark">
                         <div class="branding">
                             <img src="./img/logo-restorant.png" alt="orden-tacos">
-                            <h3>Los Pollsmanos</h3>
+                            <h3>Heladería Don Juan</h3>
                         </div>
                         <div class="mark">
                             <span><i class="fa fa-star"></i> 3.9</span>
