login resposivo entre otras mejoras

--- a/index.html
+++ b/index.html
@@ -166,6 +166,21 @@
             </a>
     </main>
 
+    <footer>
+        <div class="footer-container">
+            <p>&copy; 2024 Sabropedia. Todos los derechos reservados.</p>
+            <p><a href="mailto:admin@sabropedia.com">Contacto con los administradores</a></p>
+            <div class="social-links">
+                <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+            </div>
+            <p><a href="/politicas" class="politicas">Consulta nuestras políticas de privacidad y datos del usuario</a></p>
+        </div>
+    </footer>
+
+
+
     <!-- JavaScript file to handle interactions -->
     <script src="./main.js"></script>
 </body>
