--- a/detalles.html
+++ b/detalles.html
@@ -16,7 +16,7 @@
 <body>
     <!-- Header section: Logo, title, and login/cart -->
     <header>
-        <div class="headerSection">
+        <nav class="header-section">
             <img class="logo" src="./img/logo.png" alt="logo">
             <div class="nav-buttons">
                 <ul>
@@ -30,10 +30,8 @@
             <div class="loginSection">
                 <a href="/login.html" id="login">Cerrar Sesión</a>
             </div>
-        </div>
+        </nav>
 
-        <div class="nav-bar">
-        </div>
     </header>
 
     <!-- Main body section: Contains left and right parts -->
@@ -89,7 +87,7 @@
 
         <!-- Formulario para agregar reseña (ubicado aquí) -->
         <div class="add-review">
-            <h4>Deja tu reseña:</h4>
+            <h4>Cuéntanos, qué te pareció nuestro servicio?</h4>
             <form action="guardar_resena.php" method="POST">
                 <textarea name="resena" placeholder="Escribe tu reseña aquí..." required></textarea>
                 <div class="rating">
@@ -122,26 +120,23 @@
         </div> <!-- card -->
     </div>
 </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     </main>
 
+    <footer>
+        <div class="footer-container">
+            <p>&copy; 2024 Sabropedia. Todos los derechos reservados.</p>
+            <p><a href="mailto:admin@sabropedia.com">Contacto con los administradores</a></p>
+            <div class="social-links">
+                <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+            </div>
+            <p><a href="/politicas" class="politicas">Consulta nuestras políticas de privacidad y datos del usuario</a></p>
+        </div>
+    </footer>
+
     <!-- JavaScript file to handle interactions -->
-    <script src="./main.js"></script>
+<script src="./main.js"></script>
 </body>
 
 
