--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
 
             <div class="loginSection">
-                <a href="/login.html" id="login">Hola, ingresa aquí</a>
+                <a href="/login.html" id="login" >Hola, ingresa aquí<i class="fa-solid fa-arrow-pointer"></i></a> 
             </div>
         </div>
 
@@ -33,11 +33,16 @@
             <div class="slogan">Donde el saber y el sabor se encuentran.</div>
             <div class="nav-buttons">
                 <ul>
-                    <li> <a href="index.html"><h5>INICIO</h5></a></li>
-                    <li> <a href="restaurantes.html"><h5>RESTAURANTES</h5></a></li>
-                    <li> <a href="heladerias.html"><h5>HELADERÍAS</h5></a></li>
-                    <li> <a href="cafeterias.html"><h5>CAFETERÍAS</h5></a></li>
-                    <li> <a href="foodtrucks.html"><h5>FOOD TRUCKS</h5></a></li>
+                    <li> <a href="index.html">
+                        <i class="fa-solid fa-house"></i><h5>INICIO</h5></a></li>
+                    <li> <a href="restaurantes.html">
+                        <i class="fa-solid fa-utensils"></i><h5>RESTAURANTES</h5></a></li>
+                    <li> <a href="heladerias.html">
+                        <i class="fa-solid fa-ice-cream"></i><h5>HELADERÍAS</h5></a></li>
+                    <li> <a href="cafeterias.html">
+                        <i class="fa-solid fa-mug-saucer"></i><h5>CAFETERÍAS</h5></a></li>
+                    <li> <a href="foodtrucks.html">
+                        <i class="fa-solid fa-truck"></i><h5>FOOD TRUCKS</h5></a></li>
                 </ul>
             </div>
         </div>
